<resources>
    <string name="app_name">TransporFast</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">INICIO</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_empleado">EMPLEADO</string>
    <string name="menu_rutas">RUTAS</string>
    <string name="menu_buses">BUSES</string>
    <string name="menu_cuenta">CUENTA</string>

    <string name="google_maps_key">AIzaSyB80g4vFxONAvn1HnngyBevhH4ZZZtwDKY</string>

    <array name="valoresPrueba">
        <item>Elija una ruta</item>
        <item>5-LP</item>
        <item>3-LP</item>
        <item>4_LP</item>
        <item>R-92</item>
    </array>
    <array name="valorempresa">
    <item>Elija un valor</item>
    </array>
    <array name="valorruta">
        <item>Elija ruta</item>
        <item>5-LP</item>
        <item>3-LP</item>
        <item>4_LP</item>
        <item>R-92</item>

    </array>
    <array name="valorauto">
        <item>Seleccione un auto</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>

    </array>
    <array name="ruta">
        <item>Seleccione una ruta</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </array>
    <string name="title_activity_mapa">mapa</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>