<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.fjar.transporfast.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.fjar.transporfast.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.fjar.transporfast.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_empleado"
        android:name="com.fjar.transporfast.ui.empresa.empleado"
        android:label="@string/menu_empleado"
        tools:layout="@layout/fragment_empleado" />
    <fragment
        android:id="@+id/nav_rutas"
        android:name="com.fjar.transporfast.ui.empresa.rutas"
        android:label="@string/menu_rutas"
        tools:layout="@layout/fragment_rutas" />
    <fragment
        android:id="@+id/nav_buses"
        android:name="com.fjar.transporfast.ui.empresa.Buses"
        android:label="@string/menu_buses"
        tools:layout="@layout/fragment_buses" />
</navigation>